<package format="2">
  <name>robot_msgs</name>
  <version>0.0.0</version>
  <description>The robot_msgs package</description>

  <author email="spitzer@cmu.edu">Alex Spitzer</author>
  <maintainer email="spitzer@cmu.edu">Alex Spitzer</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
